# MaxSharpeRatio

./: .breakpoints  BTC-USD.csv  DSI.csv  TSLA.csv  functions.py  main.py  oldMain.py  old_priceDataEligible.json  priceData.json  priceData.xlsx  priceDataEligible.json  priceDataFinal.json  priceDataSample.json  pyproject.toml  test.py  testData.json  tickersList.csv  tslaPrice.json
