[tool.poetry]
name = "fussygrandpiracy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"
yfinance = "^0.1.64"
pandas-datareader = "^0.10.0"
openpyxl = "^3.0.9"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
